--- a/application/flask_math/static/css/style.css
+++ b/application/flask_math/static/css/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 .blog-body {
-  padding: 1.25em;
+  padding-top: 1.25em;
+  padding-bottom: 1.25em;
 }
 
 * {
@@ -16,10 +17,6 @@
 
 .heading:hover {
   color: #555555;
-  text-decoration: none;
-}
-
-.heading2:link {
   text-decoration: none;
 }
 
