--- a/application/flask_math/templates/instructions.html
+++ b/application/flask_math/templates/instructions.html
@@ -70,7 +70,7 @@
 
 <h4>1.式の入力</h4>
 <ul>
-  <li>対応している関数は<a href="https://www.sympy.org/en/index.html" target="_blank" class="heading2">sympy</a>を参照</li>
+  <li>対応している関数は<a href="https://www.sympy.org/en/index.html" target="_blank" class="heading">sympy</a>を参照</li>
   <li>変数には()をつけてください</li>
   <li>積は*、指数は**を用いて入力</li>
 </ul>
