--- a/application/flask_math/templates/derivative.html
+++ b/application/flask_math/templates/derivative.html
@@ -86,14 +86,13 @@
     </div>
   </div><br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form><br>
+</form><br><br>
 
 {% if init_flag==0 %}
-<h4 class="latex">\[{{Anser[0]}}\]</h4>
-<h4 class="latex">\[{{Anser[1]}}\]</h4>
-
-<br><br>
 <div class="center">
+  <h4 class="latex">\({{Anser[0]}}\)</h4>
+  <h4 class="latex">\({{Anser[1]}}\)</h4>
+  <br><br>
   <h5>\(\LaTeX\)</h5>
   <h5 class="latex">
     <pre>{{Anser[0]}}</pre>
