--- a/application/flask_math/templates/integral.html
+++ b/application/flask_math/templates/integral.html
@@ -85,11 +85,9 @@
       {% endif %}
     {% endif %}
     </div>
-  </div>
-  <br>
+  </div><br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form>
-<br><br>
+</form><br><br>
 
 {% if init_flag==0 %}
 <div class="center">
