--- a/application/flask_game/static_game/css/style.css
+++ b/application/flask_game/static_game/css/style.css
@@ -23,7 +23,6 @@
 }
 
 /* footer */
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -47,7 +46,6 @@
 }
 
 /* radioButton */
-
 .radioArea input[type="radio"] {
   /* 大きさ：横 */
   width: 13pt;
@@ -60,7 +58,6 @@
 }
 
 /* --- チェックボックス直後のlabel --- */
-
 .radioArea input[type="radio"]+label {
   /* labelの余白 */
   padding: 0 10px;
@@ -79,7 +76,6 @@
 }
 
 /* --- 選択されたチェックボックス直後のlabel --- */
-
 .radioArea input[type="radio"]:checked+label {
   color: #ffffff;
   /* lebelの背景 */
@@ -87,11 +83,15 @@
 }
 
 /* --- 選択されていないチェックボックス直後のlabelにマウスが乗った --- */
-
 .radioArea input[type="radio"]:not(:checked)+label:hover {
   color: #ffffff;
   /* lebelの背景 */
   background: rgba(108, 117, 125, 0.4);
+}
+
+canvas {
+  width: 100%;
+  height: 400px;
 }
 
 @media only screen and (max-width: 480px) {
