--- a/application/flask_arduino/static_arduino/css/style.css
+++ b/application/flask_arduino/static_arduino/css/style.css
@@ -18,10 +18,18 @@
 }
 
 .graph {
-  width: 100%;
-  height: auto;
+  width:30%;
+  max-width:100%;
+  height:auto;
 }
 
+@media only screen and (max-device-width: 480px) {
+  .graph {
+    width:75%;
+    max-width:100%;
+    height:auto;
+  }
+}
 
 /* footer */
 .wrapper {
