--- a/application/flask_CPU/static_cpu/css/style.css
+++ b/application/flask_CPU/static_cpu/css/style.css
@@ -3,7 +3,8 @@
   text-align: center;
 }
 
-.heading:link, .heading:visited {
+.heading:link,
+.heading:visited {
   color: #000000;
   text-decoration: none;
 }
@@ -47,7 +48,6 @@
   width: 50%;
 }
 
-
 /* footer */
 .wrapper {
   display: flex;
@@ -77,10 +77,12 @@
   .footer_ul {
     column-count: 2;
   }
-  .footer_ul_ip, .footer_ul_weather {
+  .footer_ul_ip,
+  .footer_ul_weather {
     column-count: 1;
   }
-  .split, .split2 {
+  .split,
+  .split2 {
     width: 100%;
   }
 }
