--- a/application/flask_arduino/static_arduino/css/style.css
+++ b/application/flask_arduino/static_arduino/css/style.css
@@ -60,7 +60,7 @@
 }
 
 /* --- チェックボックス直後のlabel --- */
-.radioArea input[type="radio"]+label {
+.radioArea input[type="radio"] + label {
   /* labelの余白 */
   padding: 0 10px;
   /* labelの文字サイズ */
@@ -78,15 +78,32 @@
 }
 
 /* --- 選択されたチェックボックス直後のlabel --- */
-.radioArea input[type="radio"]:checked+label {
+.radioArea input[type="radio"]:checked + label {
   color: #ffffff;
   /* lebelの背景 */
   background: rgb(108, 117, 125);
 }
 
 /* --- 選択されていないチェックボックス直後のlabelにマウスが乗った --- */
-.radioArea input[type="radio"]:not(:checked)+label:hover {
+.radioArea input[type="radio"]:not(:checked) + label:hover {
   color: #ffffff;
   /* lebelの背景 */
   background: rgba(108, 117, 125, 0.4);
+}
+
+/* 2分割 */
+@media (min-width: 600px) {
+  #parent {
+    display: flex;
+  }
+
+  #child1 {
+    flex-grow: 1;
+    padding-top: 8%;
+    padding-left: 8%;
+  }
+
+  #child2 {
+    flex-grow: 1;
+  }
 }
