--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -22,6 +22,21 @@
   text-align: center;
 }
 
+/* img */
+.img {
+    width: 50%;
+    max-width: 50%;
+    height: auto;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 /* footer */
 .wrapper {
   display: flex;
