--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -40,7 +40,7 @@
           </a>
         </li>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <li class="nav-item dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
