--- a/application/flask_CPU/static_cpu/css/style.css
+++ b/application/flask_CPU/static_cpu/css/style.css
@@ -62,8 +62,7 @@
 .footer_ul_weather {
   column-count: 2;
 }
-
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
