--- a/application/flask_arduino/static_arduino/css/style.css
+++ b/application/flask_arduino/static_arduino/css/style.css
@@ -40,8 +40,7 @@
 .footer_ul {
   column-count: 7;
 }
-
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
