--- a/application/flask_game/static_game/css/style.css
+++ b/application/flask_game/static_game/css/style.css
@@ -39,8 +39,7 @@
 .footer_ul {
   column-count: 6;
 }
-
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
@@ -100,7 +99,6 @@ canvas {
     display: none;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .display-none2 {
     display: none;
