--- a/application/flask_raspi/static_raspi/css/style.css
+++ b/application/flask_raspi/static_raspi/css/style.css
@@ -35,7 +35,7 @@
   column-count: 5;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
