--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -28,8 +28,7 @@
   max-width: 50%;
   height: auto;
 }
-
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .img {
     width: 100%;
     max-width: 100%;
@@ -43,7 +42,7 @@
   height: auto;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .img_index {
     width: 30%;
     max-width: 30%;
@@ -65,10 +64,14 @@
 }
 
 .footer_ul {
-  column-count: 6;
+  column-count: 7;
 }
-
-@media only screen and (max-device-width: 480px) {
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  .footer_ul {
+    column-count: 4;
+  }
+}
+@media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
