--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 .blog-body {
-  padding: 1.25em;
+  padding-top: 1.25em;
+  padding-bottom: 1.25em;
 }
 
 * {
@@ -9,12 +10,17 @@
 
 .heading:link,
 .heading:visited {
-  color: #000000;
+  color: black;
   text-decoration: none;
 }
 
 .heading:hover {
-  color: #555555;
+  color: gray;
+  text-decoration: none;
+}
+
+.heading.heading_dark {
+  color: white;
   text-decoration: none;
 }
 
@@ -75,4 +81,66 @@
   .footer_ul {
     column-count: 2;
   }
+}
+
+
+/* toggle switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #ccc;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ccc;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
