--- a/application/flask_math/static_math/css/style.css
+++ b/application/flask_math/static_math/css/style.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
-.blog-body {
+.main_text {
   padding-top: 1.25em;
   padding-bottom: 1.25em;
 }
 
 * {
   font-family: "Mplus 1p";
+  touch-action: manipulation;
 }
 
 .heading:link,
