--- a/application/flask_raspi/static_raspi/css/style.css
+++ b/application/flask_raspi/static_raspi/css/style.css
@@ -3,14 +3,23 @@
   text-align: center;
 }
 
+* {
+  font-family: "Mplus 1p";
+}
+
 .heading:link,
 .heading:visited {
-  color: #000000;
+  color: black;
   text-decoration: none;
 }
 
 .heading:hover {
-  color: #555555;
+  color: gray;
+  text-decoration: none;
+}
+
+.heading.heading_dark {
+  color: white;
   text-decoration: none;
 }
 
@@ -34,9 +43,74 @@
 .footer_ul {
   column-count: 5;
 }
-
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  .footer_ul {
+    column-count: 4;
+  }
+}
 @media only screen and (max-width: 480px) {
   .footer_ul {
     column-count: 2;
   }
+}
+
+/* toggle switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #ccc;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ccc;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
